--- a/index.html
+++ b/index.html
@@ -32,5 +32,15 @@ h1 {letter-spacing: 6px}
       <li>Numba</li>
     </ol> 
 
+    <h2>Instructions</h2>
+    Just run <i>run.sh</i>
+
+    <h2>Results</h2>
+    <ul>
+        <li><a href="plots/MH_Summary.html">Metropolis Hasting</a></li>
+        <li><a href="plots/Hardcore_Summary.html">Hardcore model</a></li>
+        <li><a href="plots/Q3_Summary.html">Block vs Gibbs sampling Comparison</a></li>
+      </ul> 
+
     </body>
 </html>
